syntax = "proto3";

import "msgenum.proto";
import "struct.proto";

message Request {
  EntityInfoChangeRequest entityChangeRequest = 1; //实体改变请求，例如两条蛇相撞的时候、蛇吃道具的时候要发此类请求
  HeroQuitRequest heroQuitRequest = 2; //玩家退出请求
}

message EntityInfoChangeRequest {
  EVENT_TYPE eventType = 1; // 事件类型 enum
  int32 playerId = 2; // 发送请求的实体Id
  int32 linkedId = 3; // 交互对象
  int32 linkedType = 4; //交互的对象类型
  HeroMsg playerMsg = 5; //玩家的信息
}


message HeroQuitRequest {
  int32 heroId = 1; //玩家Id
  int64 time = 2; //离开时间
}
